Fixed bug in analysis with bytecode-path and abi-path options